--- a/config/config.env
+++ b/config/config.env
@@ -2,7 +2,7 @@
 
 PORT = 4000
 NODE_ENV = DEVELOPMENT
-FRONTEND_URL = "http://localhost:3000/"
+FRONTEND_URL = "http://localhost:3000"
 
 DB_URI ="mongodb+srv://brightosman:Kh4HxqeQyZfmutz@cluster0.xzthr.mongodb.net/afro-shop2?retryWrites=true"
 
