--- a/config/config.env
+++ b/config/config.env
@@ -1,7 +1,7 @@
 
 
 PORT = 4000
-NODE_ENV = DEVELOPMENT
+NODE_ENV = PRODUCTION
 FRONTEND_URL = "http://localhost:3000"
 
 DB_URI ="mongodb+srv://brightosman:Kh4HxqeQyZfmutz@cluster0.xzthr.mongodb.net/afro-shop2?retryWrites=true"
